--- a/app/styles/catering-page.css
+++ b/app/styles/catering-page.css
@@ -667,7 +667,7 @@ padding-bottom: 20px;
 
 @media (min-width: 1921px) {
   .inner-wolf-bestell{
-    gap: 40px;
+    gap: 20px;
   }
   /* .inner-wolf-bestell .s-wrap{
     max-width: 1170px;
@@ -780,7 +780,7 @@ padding-bottom: 20px;
     max-width: 53rem;
   }
   .inner-wolf-bestell{
-    gap: 8px;
+    gap: 0px;
   }
   .logo-box img {
     width: 70%;
@@ -832,6 +832,9 @@ padding-bottom: 20px;
 
 
 @media (max-width: 1200px) {
+  .inner-wolf-bestell .right-logo img {
+    top: 30px;
+  }
   .brandenburg .brand-left {
     padding-right: 40px;
   }
@@ -873,7 +876,10 @@ padding-bottom: 20px;
 }
 @media (max-width: 1100px) {
   .inner-wolf-bestell .right-logo img {
-      top: 58px;
+    top: 28px;
+    left: 20px;
+        width: 4.978rem;
+        height: 5.186rem;
   }
 }
 
@@ -915,10 +921,9 @@ padding-bottom: 20px;
   }
 
   .inner-wolf-bestell .right-logo img {
-    width: 115px;
-    left: 96px;
-    top: 53px;
-}
+    width: 87px;
+    left: 0px;
+    top: 28px;}
 
   .b-btn-wrap a {
     font-size: 16px;
@@ -952,6 +957,10 @@ padding-bottom: 20px;
   .curywolf-catering-box .img-big-wrap:nth-child(1) a {
     transform: translate(-3%, 1%);
   }
+  .inner-wolf-bestell .s-wrap {
+    max-width: 755px;
+    margin-top: -10px;
+}
 }
 @media (max-width: 960px) {
 
@@ -971,8 +980,10 @@ padding-bottom: 20px;
     max-width: 43rem;
 }
 .inner-wolf-bestell .s-wrap img.naturlich-image{
-  right: 32px;
+  width: 95px;
+  right: 14px;
   bottom: 6px;
+  height: 95.18px;
 }
 .inner-wolf-bestell .right-logo{
   margin-bottom: 5px;
@@ -1357,9 +1368,9 @@ padding-bottom: 20px;
     margin: 0 0 25px 0;
   }
   .inner-wolf-bestell .right-logo img{
-    width: 67px;
-    top: -30px;
-    left: -30px;
+    width: 70px;
+    top: -19px;
+    left: 9px;
   }
 }
 @media (max-width: 390px) {
@@ -1377,20 +1388,24 @@ padding-bottom: 20px;
     margin-top: 20px;
   }
   .inner-wolf-bestell .right-logo img {
-    width: 69px;
-    top: -30px;
+    width: 68px;
+    top: -22px;
 }
 .inner-wolf-bestell .s-wrap img.naturlich-image{
   right: -26px;
   width: 68.88px;
   height: 68.18px;
 }
+.inner-wolf-bestell h4 {
+  font-size: 1rem;
+  line-height: 0.98rem;
+}
 }
 
 @media (max-width: 360px) {
   .inner-wolf-bestell .right-logo img {
-    width: 90px;
-    top: -82px;
+    width: 82px;
+    top: -19px;
 }
 }
 @media (max-width: 320px) {
@@ -1400,7 +1415,8 @@ padding-bottom: 20px;
 }
 .inner-wolf-bestell .right-logo img {
   width: 90px;
-  top: -86px;
+  top: -92px;
+  left: -8px;
 }
 html[lang="nl"] .inner-wolf-bestell .right-logo img {
   width: 70px;
