--- a/app/styles/catering-page.css
+++ b/app/styles/catering-page.css
@@ -834,6 +834,9 @@ padding-bottom: 20px;
 @media (max-width: 1200px) {
   .inner-wolf-bestell .right-logo img {
     top: 30px;
+    left: 34px;
+    width: 4.978rem;
+    height: 6.186rem;
   }
   .brandenburg .brand-left {
     padding-right: 40px;
@@ -877,9 +880,9 @@ padding-bottom: 20px;
 @media (max-width: 1100px) {
   .inner-wolf-bestell .right-logo img {
     top: 28px;
-    left: 20px;
-        width: 4.978rem;
-        height: 5.186rem;
+    left: 2px;
+    width: 4.978rem;
+    height: 5.186rem;
   }
 }
 
@@ -989,9 +992,9 @@ padding-bottom: 20px;
   margin-bottom: 5px;
 }
 .inner-wolf-bestell .right-logo img {
-  width: 110px;
+  width: 100px;
   left: 6px;
-  top: 65px;
+  top: 38px;
 }
 .main-catering-page .food-decorative-garland {
   margin-top: -50px !important;
@@ -1375,7 +1378,9 @@ padding-bottom: 20px;
 }
 @media (max-width: 390px) {
   .inner-wolf-bestell .s-wrap img.naturlich-image {
-    right: -12px;
+    right: 0px;
+    bottom: 6px;
+    height: 79.18px;
 }
 }
 
@@ -1412,11 +1417,16 @@ padding-bottom: 20px;
 
 .inner-wolf-bestell .s-wrap img.naturlich-image{
   right: -26px;
+  width: 53.88px;
+  height: 53.18px;
+}
+.inner-wolf-bestell .s-wrap {
+  margin-top: -16px;
 }
 .inner-wolf-bestell .right-logo img {
-  width: 90px;
+  width: 79px;
   top: -92px;
-  left: -8px;
+  left: -9px;
 }
 html[lang="nl"] .inner-wolf-bestell .right-logo img {
   width: 70px;
