--- a/app/styles/catering-page.css
+++ b/app/styles/catering-page.css
@@ -159,24 +159,6 @@ padding-bottom: 20px;
   line-height: 22px;
   max-width: 68rem;
 }
-@media (max-width: 1680px) {
-  .inner-wolf-bestell h3 {
-    max-width: 56rem;
-}
-.inner-wolf-bestell .left-content h1 {
-  font-size: calc(32px + (70 - 30)*((100vw - 320px) / (1920 - 320)));
-  line-height:calc(40px + (60 - 40) * ((100vw - 320px) / (1920 - 320)));
-  margin-bottom: 0px;
-  margin-top: 0px;
-  text-align: center;
-}
-.inner-wolf-bestell .s-wrap {
-  max-width: 700px;
-  position: relative;
-  margin-top: -30px;
-}
-  
-}
 .inner-wolf-bestell h4 {
   color: #fff;
     font-family: 'BertholdBlock';
@@ -730,15 +712,50 @@ padding-bottom: 20px;
 .inner-wolf-bestell-wrap{
   margin-top: 0px;
 }
+.inner-wolf-bestell .s-wrap .img-one {
+  padding-bottom: 10px;
+}
+.inner-wolf-bestell .s-wrap .c-s-image-section {
+  margin: 0px auto 20px;
+}
 .inner-wolf-bestell .right-logo img {
-  width: 7.978rem;
-  height: 14.186rem;
-  left: 38px;
-  top: -15px;
+  width: 5.978rem;
+  height: 6.186rem;
+  left: 52px;
+  top: 32px;
 }
 .inner-wolf-bestell .s-wrap img.naturlich-image {
-  bottom: -75px;
+  bottom: -40px;
+  width: 88.88px;
+    height: 88.18px;
 }
+  .inner-wolf-bestell h3 {
+    max-width: 50rem;
+}
+.inner-wolf-bestell {
+  gap: 5px;
+}
+.inner-wolf-bestell h3 {
+  font-size: 16px;
+  line-height: 20px;
+}
+.inner-wolf-bestell .left-content h1 {
+  font-size: calc(32px + (60 - 30)*((100vw - 320px) / (1920 - 320)));
+  line-height:calc(40px + (50 - 40) * ((100vw - 320px) / (1920 - 320)));
+  margin-bottom: 0px;
+  margin-top: 0px;
+  text-align: center;
+}
+.inner-wolf-bestell .s-wrap {
+  max-width: 700px;
+  position: relative;
+  margin-top: -30px;
+}
+.inner-wolf-bestell h4 {
+  font-size: 2rem;
+  line-height: 2rem;
+}
+  
 }
 
 @media (max-width: 1440px) {
@@ -762,6 +779,7 @@ padding-bottom: 20px;
    }
   .inner-wolf-bestell .s-wrap {
     max-width: 755px;
+    margin-top: 0px;
   }
   .inner-wolf-bestell .right-logo img{
     left: -13px;
@@ -1366,6 +1384,9 @@ padding-bottom: 20px;
   }
   .inner-wolf-bestell .s-wrap img.naturlich-image{
     right: 0px;
+    width: 70px;
+    bottom: 6px;
+    height: 70.18px;
   }
   .inner-wolf-bestell h3 {
     margin: 0 0 25px 0;
@@ -1387,23 +1408,26 @@ padding-bottom: 20px;
 
 @media (max-width: 375px) {
   .img-one {
-    width: 156px;
+    width: 115px;
   }
   .inner-wolf-bestell{
     margin-top: 20px;
   }
   .inner-wolf-bestell .right-logo img {
     width: 68px;
-    top: -22px;
+    top: -26px;
+}
+.inner-wolf-bestell {
+  gap: 9px;
 }
 .inner-wolf-bestell .s-wrap img.naturlich-image{
-  right: -26px;
+  right: -9px;
   width: 68.88px;
   height: 68.18px;
 }
 .inner-wolf-bestell h4 {
   font-size: 1rem;
-  line-height: 0.98rem;
+  line-height: 1rem;
 }
 }
 
