--- a/app/styles/catering-page.css
+++ b/app/styles/catering-page.css
@@ -660,7 +660,7 @@ padding-bottom: 20px;
     max-width: 50rem;
   } */
 }
-@media (max-width: 2048px) {
+@media screen and (max-width: 2048px) and (min-width: 1920px)  {
   .curywolf-catering-box {
     max-width: 1000px;
     justify-content: center;
@@ -670,13 +670,27 @@ padding-bottom: 20px;
   }
   .inner-wolf-bestell .left-content h1 {
     text-align: center;
+    margin-top: 0px;
+    margin-bottom: 0px; 
+    font-size: calc(32px + (80 - 30)*((100vw - 320px) / (1920 - 320)));
+    line-height:calc(40px + (80 - 40) * ((100vw - 320px) / (1920 - 320)));
+}
+.inner-wolf-bestell .s-wrap {
+  max-width: 800px;
+}
+.inner-wolf-bestell h4 {
+  max-width: 40rem;
+  font-size: 2.2rem;
+  line-height: 2.2rem;
 }
   .main-catering-page .food-decorative-garland{
     margin-top: -110px !important;
   }
   .inner-wolf-bestell .right-logo img {
-    width: 9.978rem;
-    height: 13.186rem;
+    width: 7.978rem;
+    height: 7.186rem;
+    left: -40px;
+    top: 37px;
   }
   /* .inner-wolf-bestell .s-wrap img.naturlich-image {
     bottom: -25px;
