--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -19,8 +19,8 @@
   align-items: center;
   padding: 70px 0;
 }
-/* .marquee {
-  position: sticky;
+.marquee {
+  position: fixed;
   top: 93px;
   z-index: 7;
   background-color: #FEDE03;
@@ -28,20 +28,6 @@
   white-space: nowrap;
   width: 100%;
   height: 2.813rem;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-} */
-.marquee {
-  position: sticky;
-  top: calc(var(--header-height, 93px)); 
-  z-index: 7;
-  background-color: #fede03;
-  white-space: nowrap;
-  width: 100%;
-  height: 2.813rem; 
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -427,7 +413,7 @@ body.no-scroll {
   transform: translateX(calc(var(--aside-width) * -1));
 }
 
-/* .header {
+.header {
   align-items: center;
   background: var(--color-red);
   display: flex;
@@ -436,18 +422,6 @@ body.no-scroll {
   z-index: 9;
   background: rgba(168, 10, 21, 1);
   box-shadow: 0px 4px 5px 0px #00000040;
-  position: sticky;
-  top: 0;
-} */
-.header {
-  align-items: center;
-  background: var(--color-red);
-  display: flex;
-  height: var(--header-height, 93px); 
-  padding: 15px 0;
-  z-index: 9;
-  background: #a80a15;
-  box-shadow: 0 4px 5px #00000040;
   position: sticky;
   top: 0;
 }
