--- a/app/styles/catering-page.css
+++ b/app/styles/catering-page.css
@@ -668,6 +668,55 @@ padding-bottom: 20px;
     max-width: 50rem;
   } */
 }
+@media screen and (min-width: 2560px) {
+  .container {
+    max-width: 3000px!important;
+  }
+  .inner-wolf-bestell h3 {
+    color: #fff;
+    font-family: "Gotham";
+    margin: 0;
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 40px;
+    max-width: 97rem;
+}
+.inner-wolf-bestell .s-wrap {
+    max-width: 2000px;
+    position: relative;
+}
+.inner-wolf-bestell .s-wrap .c-s-image-section {
+    display: flex;
+    justify-content: center;
+    max-width: 2000px;
+    margin: 0 auto 35px;
+    position: relative;
+    z-index: 1;
+    gap: 20px;
+}
+.inner-wolf-bestell-wrap .inner-wolf-bestell.aos-init.aos-animate {
+  transform: scale(1);
+  transform-origin: top;
+}
+.inner-wolf-bestell h4 {
+    color: #fff;
+    font-family: "BertholdBlock";
+    max-width: 95rem;
+    margin: 60px 0 0;
+    font-size: 5rem;
+    font-weight: 400;
+    text-align: center;
+    line-height: 5rem;
+}
+.inner-wolf-bestell .s-wrap img.naturlich-image {
+  width: 200px;
+  height: 200px;
+  bottom: -22px;
+  bottom: -130px;
+}
+
+}
 @media screen and (max-width: 2048px) and (min-width: 1920px)  {
   .curywolf-catering-box {
     max-width: 1000px;
@@ -1486,6 +1535,7 @@ padding-bottom: 20px;
   line-height: 16px;
 }
 }
+
 @media (max-width: 390px) {
   .inner-wolf-bestell .left-content h1 {
     font-size: 24px;
@@ -1505,6 +1555,16 @@ padding-bottom: 20px;
   line-height: 16px;
 }
 }
+@media only screen and (device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
+  .inner-wolf-bestell h4 {
+    font-size: 1.3rem;
+    line-height: 1.5rem;
+}
+.img-one {
+  width: 80%;
+  height: 100%;
+}
+ }
 
 
 @media (max-width: 375px) {
