--- a/app/styles/catering-page.css
+++ b/app/styles/catering-page.css
@@ -696,11 +696,18 @@ padding-bottom: 20px;
 .inner-wolf-bestell .s-wrap .c-s-image-section {
     display: flex;
     justify-content: center;
-    max-width: 2000px;
+    max-width: 1560px;
     margin: 0 auto 35px;
     position: relative;
     z-index: 1;
     gap: 20px;
+}
+.inner-wolf-bestell-wrap {
+  margin-top: -258px;
+}
+.inner-wolf-bestell .left-content h1{
+  font-size: calc(12px + (95 - 30)*((100vw - 320px) / (1920 - 320)));
+  line-height: calc(14px + (95 - 40)*((100vw - 320px) / (1920 - 320)));
 }
 .inner-wolf-bestell-wrap .inner-wolf-bestell {
   transform: scale(0.87);
@@ -721,10 +728,10 @@ padding-bottom: 20px;
     line-height: 5rem;
 }
 .inner-wolf-bestell .s-wrap img.naturlich-image {
-  width: 200px;
-  height: 200px;
+  width: 170px;
+  height: 170px;
   bottom: -22px;
-  bottom: -130px;
+  bottom: -100px;
 }
 .curywolf-catering-box {
   -webkit-border-top: none;
