--- a/app/styles/catering-page.css
+++ b/app/styles/catering-page.css
@@ -812,8 +812,7 @@ padding-bottom: 20px;
     bottom: -25px;
 } */
 }
-
-@media (max-width: 1919px) {
+@media screen and (max-width: 1919px) and (min-width: 1681px)  {
   .curywolf-catering-box {
     max-width: 1000px;
     justify-content: center;
@@ -822,12 +821,29 @@ padding-bottom: 20px;
     padding-top: 70px;
   }
   .inner-wolf-bestell {
-    gap: 25px;
+    gap: 10px;
 }
-
+.inner-wolf-bestell .left-content h1{
+  font-size: calc(16px + (95 - 30)*((100vw - 320px) / (1920 - 320)));
+  line-height: calc(18px + (95 - 40)*((100vw - 320px) / (1920 - 320)));
+  margin-bottom: 0rem;
+  margin-top: 1rem;
+}
   .img-big-wrap {
     width: calc(100% / 3 - 30px);
   }
+  .inner-wolf-bestell h4 {
+    max-width: 38rem;
+    font-size: 2.2rem;
+    line-height: 2.2rem;
+}
+.inner-wolf-bestell .s-wrap img.naturlich-image {
+  width: 108.88px;
+  height: 108.18px;
+  bottom: -22px;
+  bottom: -120px;
+  right: 83px;
+}
 
 }
 @media (max-width: 1680px) {
@@ -884,11 +900,11 @@ padding-bottom: 20px;
 }
 @media screen and (max-width: 1919px) and (min-width: 1680px)  {
   .inner-wolf-bestell .right-logo img {
-    width: 8.978rem;
-    height: 8.186rem;
+    width: 7.978rem;
+    height: 7.186rem;
     position: absolute;
     left: -43px;
-    top: 28px;
+    top: 30px;
 }
 }
 
@@ -1037,7 +1053,7 @@ padding-bottom: 20px;
     top: 43px;
 }
 .inner-wolf-bestell .s-wrap {
-  max-width: 630px;
+  max-width: 550px;
   margin-top: 0px;
 }
 .inner-wolf-bestell .s-wrap img.naturlich-image {
@@ -1163,8 +1179,8 @@ padding-bottom: 20px;
   .inner-wolf-bestell h3 {
     max-width: 43rem;
 }
-.inner-wolf-bestell{
-  gap: 55px;
+.inner-wolf-bestell {
+  gap: 40px;
 }
 .inner-wolf-bestell .s-wrap{
   margin-top: 20px;
