--- a/app/styles/catering-page.css
+++ b/app/styles/catering-page.css
@@ -202,10 +202,10 @@ padding-bottom: 20px;
   margin-left: -9px;
 }
 .inner-wolf-bestell .s-wrap  .img-big-wrap:nth-child(1) {
-  z-index: 9999;
+  z-index: 6;
 }
 .inner-wolf-bestell .s-wrap .img-big-wrap:nth-child(2) {
-  z-index: 9;
+  z-index: 6;
 }
 .inner-wolf-bestell .s-wrap .img-big-wrap:nth-child(3) .img-one {
   transform: rotate(-10deg);
@@ -597,7 +597,7 @@ padding-bottom: 20px;
   transform: rotate(-5deg);
 }
 
-.curywolf-catering-box .img-big-wrap:nth-child(5) a {
+.curywolf-catering-box .img-big-wrap:nth-child(5) {
   transform: translate(-7%, 89%);
 }
 
@@ -605,7 +605,7 @@ padding-bottom: 20px;
   transform: rotate(4deg);
 }
 
-.curywolf-catering-box .img-big-wrap:nth-child(6) a {
+.curywolf-catering-box .img-big-wrap:nth-child(6) {
   transform: translate(-13%, 30%);
 }
 
@@ -613,7 +613,7 @@ padding-bottom: 20px;
   transform: rotate(-9deg);
 }
 
-.curywolf-catering-box .img-big-wrap:nth-child(7) a {
+.curywolf-catering-box .img-big-wrap:nth-child(7) {
   transform: translate(84%, 17%);
   z-index: 9;
 }
@@ -656,22 +656,21 @@ padding-bottom: 20px;
   margin-top: 20px;
 }
 
-.curywolf-catering-box .img-big-wrap:nth-child(6) a {
+.curywolf-catering-box .img-big-wrap:nth-child(6) {
   transform: translate(-13%, 124%);
 }
 .curywolf-catering-box .img-big-wrap:nth-child(6) .img-one {
   transform: rotate(1deg);
 }
-.curywolf-catering-box .img-big-wrap:nth-child(5) a {
+.curywolf-catering-box .img-big-wrap:nth-child(5) {
   transform: translate(96%, 20%);
-  /* / z-index: 9999999999; / */
 }
 .curywolf-catering-box .img-big-wrap:nth-child(5) .img-one {
   transform: rotate(350deg);
 }
-.curywolf-catering-box .img-big-wrap:nth-child(7) a {
+.curywolf-catering-box .img-big-wrap:nth-child(7) {
   transform: translate(-26%, 11%);
-  z-index: 99;
+  z-index: 6;
 }
 .curywolf-catering-box .img-big-wrap:nth-child(7) .img-one {
   transform: rotate(345deg);
@@ -699,7 +698,17 @@ padding-bottom: 20px;
     margin-top: -258px;
   }
 }
-@media screen and (min-width: 2560px) {
+@media screen and (min-width: 2241px) {
+  .curywolf-catering-box {
+    padding-bottom: 300px;
+    padding-top: 120px;
+  }
+  .curywolf-catering-box .img-big-wrap:nth-child(6) .img-one {
+    transform: rotate(4deg);
+}
+  .curywolf-catering-box .img-big-wrap:nth-child(7) {
+    transform: translate(63%, 18%);
+  }
   .container {
     max-width: 3000px!important;
   }
@@ -772,6 +781,16 @@ padding-bottom: 20px;
 }
 }
 @media screen and (max-width: 2240px) and (min-width: 1920px) {
+  .curywolf-catering-box {
+    padding-bottom: 300px;
+    padding-top: 120px;
+  }
+  .curywolf-catering-box .img-big-wrap:nth-child(6) .img-one {
+    transform: rotate(4deg);
+}
+  .curywolf-catering-box .img-big-wrap:nth-child(7) {
+    transform: translate(63%, 18%);
+  }
   .inner-wolf-bestell .left-content h1{
     font-size: calc(12px + (95 - 30)*((100vw - 320px) / (1920 - 320)));
     line-height: calc(12px + (95 - 40)*((100vw - 320px) / (1920 - 320)));
@@ -802,12 +821,15 @@ padding-bottom: 20px;
 }
 }
 @media screen and (max-width: 2048px) and (min-width: 1920px)  {
+  .curywolf-catering-box .img-big-wrap:nth-child(7) {
+    transform: translate(-32%, 18%);
+}
   .curywolf-catering-box {
     max-width: 1000px;
     justify-content: center;
-    padding-bottom: 390px;
+    padding-bottom: 248px;
     border-top: 1px solid #fff;
-    padding-top: 70px;
+    padding-top: 200px;
   }
   .inner-wolf-bestell .left-content h1 {
     text-align: center;
@@ -844,9 +866,9 @@ padding-bottom: 20px;
   .curywolf-catering-box {
     max-width: 1000px;
     justify-content: center;
-    padding-bottom: 390px;
+    padding-bottom: 200px;
     border-top: 1px solid #fff;
-    padding-top: 70px;
+    padding-top: 100px;
   }
   .inner-wolf-bestell {
     gap: 10px;
@@ -998,9 +1020,9 @@ padding-bottom: 20px;
     width: 70%;
   }
 
-  .curywolf-catering-box .img-big-wrap:nth-child(7) a {
+  /* .curywolf-catering-box .img-big-wrap:nth-child(7) a {
     transform: translate(19%, -8%);
-  }
+  } */
 
   .logo-box:nth-child(1) img {
     width: auto;
@@ -1012,12 +1034,12 @@ padding-bottom: 20px;
   }
 
   .curywolf-catering-box {
-    padding-bottom: 410px;
+    padding-bottom: 190px;
   }
 
-  .curywolf-catering-box .img-big-wrap:nth-child(7) a {
+  /* .curywolf-catering-box .img-big-wrap:nth-child(7) a {
     transform: translate(74%, 17%);
-  }
+  } */
 
   .curywolf-catering-box {
     max-width: 1100px;
@@ -1064,10 +1086,6 @@ padding-bottom: 20px;
   .img-one .inner-content p {
     font-size: 16px;
     line-height: 16px;
-  }
-
-  .curywolf-catering-box {
-    padding-bottom: 300px;
   }
 
   .ref-title h4 {
@@ -1429,7 +1447,7 @@ padding-bottom: 20px;
   }
 
   .curywolf-catering-box .img-big-wrap:nth-child(1) {
-    z-index: 99;
+    z-index: 6;
   }
 
   .img-big-wrap:nth-child(1) .img-one {
@@ -1450,11 +1468,11 @@ padding-bottom: 20px;
   }
 
   .curywolf-catering-box .img-big-wrap:nth-child(3) {
-    z-index: 99;
+    z-index: 6;
   }
 
   .curywolf-catering-box .img-big-wrap:nth-child(5) {
-    z-index: 99;
+    z-index: 6;
   }
 
   .curywolf-catering-box .img-big-wrap:nth-child(3) .img-one {
@@ -1469,29 +1487,29 @@ padding-bottom: 20px;
     transform: rotate(-7deg);
   }
 
-  .curywolf-catering-box .img-big-wrap:nth-child(5) a {
+  .curywolf-catering-box .img-big-wrap:nth-child(5) {
     transform: translate(-110%, 10%);
   }
 
   .curywolf-catering-box .img-big-wrap:nth-child(6) {
-    z-index: 99;
+    z-index: 6;
   }
 
-  .curywolf-catering-box .img-big-wrap:nth-child(6) a {
-    transform: translate(-49%, 13%);
-    z-index: 9999;
+  .curywolf-catering-box .img-big-wrap:nth-child(6) {
+    transform: translate(0%, 10%);
+    z-index: 6;
   }
 
   .curywolf-catering-box .img-big-wrap:nth-child(2) {
-    z-index: 99;
+    z-index: 6;
   }
 
   .curywolf-catering-box .img-big-wrap:nth-child(6) .img-one {
-    transform: rotate(-13deg);
+    transform: rotate(-8deg);
   }
 
-  .curywolf-catering-box .img-big-wrap:nth-child(7) a {
-    transform: translate(-109%, -40%);
+  .curywolf-catering-box .img-big-wrap:nth-child(7){
+    transform: translate(8%, 10%);
   }
 
   .curywolf-catering-box .img-big-wrap:nth-child(4) {
@@ -1499,7 +1517,7 @@ padding-bottom: 20px;
   }
 
   .curywolf-catering-box .img-big-wrap:nth-child(7) .img-one {
-    transform: rotate(-10deg);
+    transform: rotate(10deg);
   }
 
   .right-logo {
