--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -65,6 +65,18 @@
   text-align: left;
   
 }
+.badge-certified {
+  position: fixed;
+  bottom: 225px;
+  left: 13px;
+  z-index: 9;
+  width: 110px;
+  height: 110px;
+}
+.badge-certified-warp img{
+  position: relative;
+  z-index: 9;
+}
 @media screen and (max-width: 768px) {
   .marquee {
     height: 2.5rem;
