--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -77,6 +77,14 @@
   position: relative;
   z-index: 9;
 }
+
+@media screen and (max-width: 512px) {
+  .badge-certified {
+    bottom: 135px;
+    width: 70px;
+    height: 70px;
+  }
+}
 @media screen and (max-width: 768px) {
   .marquee {
     height: 2.5rem;
