--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -77,6 +77,16 @@
   z-index: 9;
   width: 110px;
   height: 110px;
+  transition: all 0.5s ease;
+}
+.badge-certified.visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.badge-certified.hidden {
+  opacity: 0;
+  visibility: hidden;
 }
 .badge-certified-warp img {
   position: relative;
